# Mako

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Client.py  Dockerfile  README.md  bot.py  docker-compose.yml  main.py  murasko_bot.py  pyproject.toml  requirements.txt  tox.ini  twitch.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
MuraskoBot/: bot.py  twitch.py
mako/: __init__.py  main.py
mako/cogs/: __init__.py  greetings.py  notification.py  orm.py  twitch_notifier.py  utils.py
mako/db/: __init__.py  database_manager.py  models.py  schema.sql
mako/utils/: checks.py
muraskobot/: murasko_bot.py
src/: .env_EXAMPLE  bot.py  main.py  twitch.py
src/cogs/: greetings.py  live_notification.py  utils.py
src/discord/: wip_audio.py
src/mako/cogs/: greetings.py  twitch_notifier.py  utils.py
src/mako/db/: __init__.py  models.py
src/mako/utils/: checks.py
